--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #8d0000;
+  --ifm-color-primary-dark: #700000;
+  --ifm-color-primary-darker: #500000;
+  --ifm-color-primary-darkest: #300000;
+  --ifm-color-primary-light: #af0000;
+  --ifm-color-primary-lighter: #d30000;
+  --ifm-color-primary-lightest: #ff0000;
   --ifm-code-font-size: 95%;
 }
 
