--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,6 +8,15 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-image: url('/img/felix.png');
+  background-position-y: -450px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.heroText {
+  text-shadow: 0 0 2px black;
 }
 
 @media screen and (max-width: 996px) {
