Fixed invalid path for img
Added yarn.lock file
And updated .gitignore to ignore intellij files

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,7 +8,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-image: url('/img/felix.png');
+  background-image: url('/static/img/felix.png');
   background-position-y: -700px;
   background-repeat: no-repeat;
 }
