--- a/src/components/Program.module.css
+++ b/src/components/Program.module.css
@@ -1,3 +1,17 @@
 .timeCell {
     white-space: nowrap;
 }
+
+.pauseRow td:nth-child(2) {
+    text-align: center;
+}
+
+.pauseTitle {
+    font-weight: bold;
+    text-transform: uppercase;
+    display: block;
+}
+
+.pauseDescription {
+    font-style: italic;
+}
